# bevy_template

./: .gitignore  Cargo.toml  README.md
src/: debugging.rs  lib.rs  loading.rs  main.rs
